ecmascript/parser/tests/test262-error-references/fail/98204d734f8c72b3.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/98204d734f8c72b3.js:1:10
  |
1 | (class {a})
  |          ^

